[package]
name = "first-rust-gui"
version = "0.1.0"
authors = ["firewallfail <firewall.fail@hotmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app to estimate retirement income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Retirement Calculator"
identifier = "io.github.firewallfail.retirement-calculator"
